# Data-Structures-Algorithms-and-Applications

./: README.md
_10Train_carriages_rearrangement/: CMakeLists.txt  main.cpp
_11Switchbox_wiring/: CMakeLists.txt  main.cpp
_12Offline_equivalence_class_problem/: CMakeLists.txt  main.cpp
_13Maze_mouse/: CMakeLists.txt  main.cpp
_14linkedQueue/: CMakeLists.txt  _21linkedQueue.cpp  _21linkedQueue.h  _6chainNode.h  main.cpp
_15arrayQueue/: CMakeLists.txt  _17queue.h  _18arrayQueue.cpp  _18arrayQueue.h  main.cpp
_16arrayDeque/: CMakeLists.txt  _19deque.h  _20arrayDeque.cpp  _20arrayDeque.h  main.cpp
_17Circuit_routing/: CMakeLists.txt  main.cpp
_18Pixel_recognition/: CMakeLists.txt  main.cpp
_19Factory simulation/: CMakeLists.txt  _22eventList.h  _22factorySim.cpp  _22factorySim.h  _22job.h  _22machine.h  _22task.h  main.cpp
_1arrayList/: CMakeLists.txt  _1myExceptions.h  _2myFunctions.cpp  _2myFunctions.h  _3sorting.cpp  _3sorting.h  _4linearList.h  _5arrayList.cpp  _5arrayList.h  _6chain.h  _6chainNode.h  main.cpp
_20dictionaryChain/: CMakeLists.txt  _23dictionary.h  _23dictionaryChain.cpp  _23dictionaryChain.h  main.cpp
_21skipList/: CMakeLists.txt  _24skipList.cpp  _24skipList.h  _24skipNode.h  main.cpp
_22hash/: CMakeLists.txt  (+7 more)
_32Box loading/: CMakeLists.txt  MaxmumLoserTree.h  binaryTreeNode.h  dBinarySearchTree.h  loserTree.h  main.cpp
_33Search tree/: CMakeLists.txt  binarySearchTree.cpp  binarySearchTree.h  bsTree.h  dBinarySearchTree.h  dictionary.h  indexedBSTree.h  indexedBinarySearchTree.h  indexedBinarySearchTreeNode.h  main.cpp
(+102 files in other folders)
